--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,12 @@ target_link_libraries(STLWrapperTest GTest::GTest GTest::Main)
 target_link_libraries(STLWrapperTest stl_wrapper)
 GTEST_ADD_TESTS(STLWrapperTest "" AUTO)
 
+add_executable(ChainTest ChainUnitTest.cxx)
+target_include_directories(ChainTest PUBLIC "${PROJECT_SOURCE_DIR}/include")
+target_link_libraries(ChainTest GTest::GTest GTest::Main)
+target_link_libraries(ChainTest chain)
+GTEST_ADD_TESTS(ChainTest "" AUTO)
+
 add_executable(DoubleHashTest DoubleHashUnitTest.cxx)
 target_include_directories(DoubleHashTest PUBLIC "${PROJECT_SOURCE_DIR}/include")
 target_link_libraries(DoubleHashTest GTest::GTest GTest::Main)
