--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,15 @@
 cmake_minimum_required (VERSION 3.8)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+foreach(TABLE_NAME stl_wrapper chain double_hash cuckoo)
+    add_library(${TABLE_NAME} "${TABLE_NAME}.cxx")
+    target_include_directories(${TABLE_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/include")
 
-add_library(stl_wrapper stl_wrapper.cxx)
-target_include_directories(stl_wrapper PUBLIC "${PROJECT_SOURCE_DIR}/include")
-
-add_library(chain chain.cxx)
-target_include_directories(chain PUBLIC "${PROJECT_SOURCE_DIR}/include")
-
-add_library(double_hash double_hash.cxx)
-target_include_directories(double_hash PUBLIC "${PROJECT_SOURCE_DIR}/include")
-
-add_library(cuckoo cuckoo.cxx)
-target_include_directories(cuckoo PUBLIC "${PROJECT_SOURCE_DIR}/include")
-
-add_executable(${PROJECT_NAME} main.cxx)
-target_include_directories(${PROJECT_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/include")
-
-target_link_libraries(${PROJECT_NAME} stl_wrapper)
+    add_executable("${TABLE_NAME}-bin" main.cxx)
+    target_compile_definitions("${TABLE_NAME}-bin" PUBLIC 
+        TABLE_NAME=${TABLE_NAME}
+        HEADER_NAME="${TABLE_NAME}.hxx"
+    )
+    target_include_directories("${TABLE_NAME}-bin" PUBLIC "${PROJECT_BINARY_DIR}/include")
+    target_link_libraries("${TABLE_NAME}-bin" "${TABLE_NAME}")
+    set_target_properties("${TABLE_NAME}-bin" PROPERTIES OUTPUT_NAME "${TABLE_NAME}")
+endforeach(TABLE_NAME)
