--- a/test/HighloadUnitTest.py.in
+++ b/test/HighloadUnitTest.py.in
@@ -1,17 +1,12 @@
-#!/usr/bin/env python3
-
-import subprocess
-import filecmp
-
 from enum import Enum
+import filecmp
 import random
 import os
 import unittest
 
 class TestHighload(unittest.TestCase):
     def setUp(self):
-        fname = "15"
-        op_count = 2 ** 9
+        op_count = 2 ** 14
         i_fname, o_fname = "./test.dat", "./test.ans"
         with open(i_fname, 'w', encoding='utf-8') as i_file, \
                 open(o_fname, 'w', encoding='utf-8') as o_file:
@@ -37,7 +32,7 @@ class TestHighload(unittest.TestCase):
                     i_file.write("{0:s} {1:d}\n".format("search", key))
                     o_file.write(str(ht.get(key, "null")) + '\n')
                 else:
-                    pass
+                    exit(-1)
 
     def tearDown(self):
         os.remove("./test.dat")
