--- a/test/HighloadUnitTest.py.in
+++ b/test/HighloadUnitTest.py.in
@@ -40,19 +40,19 @@ class TestHighload(unittest.TestCase):
         os.remove("./test.res")
 
     def test_stl_wrapper(self):
-        os.system("@CMAKE_BINARY_DIR@/bin/stl_wrapper ./test.dat ./test.res")
+        os.system("@CMAKE_BINARY_DIR@/bin/stl_wrapper ./test.dat ./test.res 2>/dev/null")
         self.assertTrue(filecmp.cmp("./test.res", "./test.ans"))
 
     def test_chain(self):
-        os.system("@CMAKE_BINARY_DIR@/bin/chain ./test.dat ./test.res")
+        os.system("@CMAKE_BINARY_DIR@/bin/chain ./test.dat ./test.res 2>/dev/null")
         self.assertTrue(filecmp.cmp("./test.res", "./test.ans"))
 
     def test_cuckoo(self):
-        os.system("@CMAKE_BINARY_DIR@/bin/cuckoo ./test.dat ./test.res")
+        os.system("@CMAKE_BINARY_DIR@/bin/cuckoo ./test.dat ./test.res 2>/dev/null")
         self.assertTrue(filecmp.cmp("./test.res", "./test.ans"))
 
     def test_double_hash(self):
-        os.system("@CMAKE_BINARY_DIR@/bin/double_hash ./test.dat ./test.res")
+        os.system("@CMAKE_BINARY_DIR@/bin/double_hash ./test.dat ./test.res 2>/dev/null")
         self.assertTrue(filecmp.cmp("./test.res", "./test.ans"))
 
 if __name__ == "__main__":
